--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>  majesty  collections all  products </title>
-	<link rel="stylesheet" type="text/css" href="./assets/css/footer.css">
+	<link rel="stylesheet" type="text/css" href="./css/style.css">
 
 <!-- 
     <link rel="stylesheet" href="./assets/css/child.css">
